--- a/player/templates/player/index.html
+++ b/player/templates/player/index.html
@@ -1,10 +1,14 @@
-<!DOCTYPE html>
-<html lang="en">
+{% load static %}
+<html lang="ru-ru">
 <head>
     <meta charset="UTF-8">
-    <title>Hello there</title>
+    <title>WP Common test</title>
 </head>
-<body>
-General Kenobi
+<body align="center">
+<div flex>
+    <a href="{% url 'social:begin' 'vk-oauth2' %}"><img src="{% static 'img/vk_logo.svg' %}" width="100" height="100"
+                                                        title="Войти через VK"></a>
+
+</div>
 </body>
 </html>
