--- a/player/templates/player/new_player.html
+++ b/player/templates/player/new_player.html
@@ -1,8 +1,12 @@
 {% load static %}
+{% load bootstrap3 %}
 {% load i18n %}
+<script src="{% bootstrap_jquery_url %}"></script>
+{% bootstrap_javascript %}
+{% bootstrap_css %}
 <script src='{% static "new_char.js" %}'></script>
 <div>
-    <h1 align="center" style="height: 50px; font-size: 20pt; font-weight: bold; color: white"><b>{% trans 'new_char' %}</b></h1>
+    <h1 align="center" style="height: 50px; font-size: 20pt; font-weight: bold; color: black"><b>{% trans 'Создание персонажа' %}</b></h1>
 </div>
 <div class="row">
     <div class="col-xs-2 col-sm-2 col-md-2">
@@ -10,20 +14,20 @@
     <div class="col-xs-8 col-sm-8 col-md-8">
         <form method="POST" action="{% url 'new_player' %}" enctype="multipart/form-data" id="post-form">
             {% csrf_token %}
-            <div class="row flex" align="center">
+            <div class="row " align="center">
                 <div class="col-xs-6 col-sm-6 col-md-6" align="right">
-                    <font size="5" style="height: 30px; font-size: 20pt; color: white; font-weight: bold">
-                        {% trans 'nickname' %}:
+                    <font size="5" style="height: 30px; font-size: 20pt; color: black; font-weight: bold">
+                        {% trans 'Никнейм' %}:
                     </font>
                 </div>
                 <div class="col-xs-6 col-sm-6 col-md-6" align="left">
                     <input id="your_name" type="text" name="nickname" maxlength="30" style="width: 250px">
                 </div>
             </div>
-            <div class="row flex" align="center">
+            <div class="row " align="center">
                 <div class="col-xs-6 col-sm-6 col-md-6" align="right">
-                    <font size="5" style="height: 30px; font-size: 20pt; color: white; font-weight: bold">
-                        {% trans 'ava_link' %}:
+                    <font size="5" style="height: 30px; font-size: 20pt; color: black; font-weight: bold">
+                        {% trans 'Аватар' %}:
                     </font>
                 </div>
                 <div class="col-xs-6 col-sm-6 col-md-6" align="left">
@@ -31,10 +35,10 @@
                     <input id="avatar" type="file" class="" accept="image/*" name="image">
                 </div>
             </div>
-            <div class="row flex" align="center">
+            <div class="row " align="center">
                 <div class="col-xs-6 col-sm-6 col-md-6" align="right">
-                    <font size="5" style="height: 30px; font-size: 20pt; color: white; font-weight: bold">
-                        {% trans 'timezone' %}:
+                    <font size="5" style="height: 30px; font-size: 20pt; color: black; font-weight: bold">
+                        {% trans 'Часовой пояс' %}:
                     </font>
                 </div>
                 <div class="col-xs-6 col-sm-6 col-md-6" align="left">
@@ -45,17 +49,17 @@
                     </select>
                 </div>
             </div>
-            <div class="row flex" align="center">
-                <font id="recruit" size="5" style="height: 15px; font-size: 15pt; color: white; font-weight: bold; cursor: pointer">
-                    {% trans 'invited' %}...
-                </font>
-            </div>
-            <div id="recruit_opt" class="row" align="center">
-                <label for="master_id" style="font-size: 15pt; color: white">{% trans 'master_id' %}:</label>
-                <input id="master_id" type="text" name="master_id" maxlength="30" value="">
-            </div>
+<!--            <div class="row " align="center">-->
+<!--                <font id="recruit" size="5" style="height: 15px; font-size: 15pt; color: black; font-weight: bold; cursor: pointer">-->
+<!--                    {% trans 'invited' %}...-->
+<!--                </font>-->
+<!--            </div>-->
+<!--            <div id="recruit_opt" class="row" align="center">-->
+<!--                <label for="master_id" style="font-size: 15pt; color: black">{% trans 'master_id' %}:</label>-->
+<!--                <input id="master_id" type="text" name="master_id" maxlength="30" value="">-->
+<!--            </div>-->
             <div class="row" align="center" style="margin-top: 3%;">
-                <button type="submit" enctype="multipart/form-data" class="save btn btn-default">{% trans 'start_game' %}!</button>
+                <button type="submit" enctype="multipart/form-data" class="save btn btn-default">{% trans 'Начать' %}!</button>
             </div>
         </form>
     </div>
