url до загруженного пользователем файла

--- a/player/templates/player/player_status.html
+++ b/player/templates/player/player_status.html
@@ -2,7 +2,7 @@
 <div style="width: 100%; max-height: 100px; display: flex; align-items: stretch">
 <!--<div style="width: 1300px">-->
     <div class="col-xs-2 col-sm-2 col-md-1">
-        <img src="{{ player.image }}" style="height: 100%">
+        <img src="{{ player.image.url }}" style="height: 100%">
     </div>
     <div class="col-xs-2 col-sm-2 col-md-2">
         <div class="row">{{ player.nickname }}</div>
