--- a/player/static/overview.css
+++ b/player/static/overview.css
@@ -1,41 +1,59 @@
-.chat__header {
-  text-align: center;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-.chat__item {
-  display: flex;
-  align-items: flex-start;
+.chat {
+  padding: 40px;
 }
 
-.chat__messages {
-  margin-left: 10px;
-}
-
-.chat__message {
+.message {
+  width: 100%;
   display: flex;
   flex-wrap: wrap;
   align-items: center;
-  margin-right: 10px;
+}
+.message--user-1 + .message--user-2,
+.message--user-2 + .message--user-1 {
+  margin-top: 1em;
+}
+.message--user-1 + .message--user-1,
+.message--user-2 + .message--user-2 {
+  margin-top: .5em;
+}
+.message__time {
+  font-size: 10px;
+  color: #ccc;
+  width: 100%;
+  margin: 0 0 5px 50px;
+}
+.message__ban {
+    color: black;
+}
+.message__author-pic {
+  margin: 0 10px 0 0;
 }
 
-.chat__message-content {
-  border-radius: 5px;
-  padding: 7px;
-  background-color: #ccc;
-  display: inline-block;
-
-  margin-left: 5px;
+.message__text {
+  padding: 10px;
+  border-radius: 10px;
+  border: 1px solid #69b4f3;
+  background-color: #bfe2ff;
+  max-width: 70%;
 }
 
-.chat__item--responder {
-  flex-direction: row-reverse;
+.message--user-2 {
+  justify-content: flex-end;
 }
-
-  .chat__item--responder .chat__message {
-    flex-direction: row-reverse;
-  }
-
-  .chat__item--responder .chat__message-content {
-    margin-left: 0;
-    margin-right: 5px;
-  }
+.message--user-2 .message__time {
+  text-align: right;
+  margin: 0 50px 5px 0;
+}
+.message--user-2 .message__author-pic {
+  order: 1;
+  margin: 0 0 0 10px;
+}
+.message--user-2 .message__text {
+  background-color: #69b4f3;
+}
