--- a/player/templates/player/header.html
+++ b/player/templates/player/header.html
@@ -5,14 +5,36 @@
 {% load bootstrap3 %}
 <head>
       <title>{{ page_name }}</title>
-<script src="{% bootstrap_jquery_url %}"></script>
-{% bootstrap_javascript %}
-{% bootstrap_css %}
-<script src='{% static "header.js" %}?{{ csrf_token }}'></script>
-{% block for_scripts_and_css %}
-{% endblock %}
+      <script src="{% bootstrap_jquery_url %}"></script>
+      {% bootstrap_javascript %}
+      {% bootstrap_css %}
+      <script src='{% static "header.js" %}?{{ csrf_token }}'></script>
+      {% block for_scripts_and_css %}
+      {% endblock %}
 </head>
 <body>
+<!-- Глобальное модальное окно -->
+<div class="modal fade" id="InfoModal" tabindex="-1" role="dialog" aria-labelledby="InfoModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <font class="modal-title" id="InfoModalTitle" style="width: 20px">
+            <!--Заголовок сообщения-->
+        </font>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+          <!--Текст сообщения-->
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary modal-grey" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-success modal-green">Save</button>
+      </div>
+    </div>
+  </div>
+</div>
 {% if player %}
 {% if not player.banned %}
 <!--Информация в шапке игры-->
