--- a/player/templates/player/player_status.html
+++ b/player/templates/player/player_status.html
@@ -8,6 +8,9 @@
         <div class="row">{{ player.nickname }}</div>
         <div class="row">
             <div class="col-xs-6 col-sm-6 col-md-6" align="left">
+                <script>
+                    const locked_txt = 'Заблокировано: $';
+                </script>
                 <b style="color: #85bb65" id="cash" {% localize off %} data-text="{{ player.cash }}" {% endlocalize %}
                                      data-toggle="tooltip" data-placement="bottom" title="Заблокировано: ${{ locked }}">
                     ${{ player.cash }}
@@ -20,7 +23,10 @@
         <div class="row">уровень {{ player.level }}</div>
     </div>
     <div class="col-xs-8 col-sm-8 col-md-8">
-        <div class="row">энергии: {{ player.energy }}%</div>
+        <script>
+            const energy_txt = 'энергии: ';
+        </script>
+        <div class="row" id="energy">энергии: {{ player.energy }}%</div>
         <div class="row">
             <form method="POST" action="{% url 'do_mining' %}" enctype="multipart/form-data">
                 {% csrf_token %}
