--- a/storage/templates/storage/trading/trading.html
+++ b/storage/templates/storage/trading/trading.html
@@ -27,6 +27,7 @@
 <div class="col-xs-10 col-sm-10 col-md-10">
     <div id="goods_list" align="center">
         <font id="offers_help" style="color: black">Выберите один или несколько критериев справа и нажмите "Поиск"</font>
+        <font id="offers_none" style="color: black; display: none">Ничего не найдено</font>
 <!--        Выберите товары по критериям слева-->
         <table id="lines" class="sort" style="display: none">
 <!--        <table id="lines" class="sort">-->
