--- a/storage/templates/storage/trading/trading.html
+++ b/storage/templates/storage/trading/trading.html
@@ -9,6 +9,7 @@
 <script src='{% static "js/tablesort.number.js" %}?{{ csrf_token }}'></script>
 <script src='{% static "js/trading.js" %}?{{ csrf_token }}'></script>
 <link rel="stylesheet" href='{% static "css/tablesort.css" %}?{{ csrf_token }}'>
+<link rel="stylesheet" href='{% static "css/style.css" %}?{{ csrf_token }}'>
 {% endblock %}
 
 {% block content %}
