--- a/player/templates/player/player_status.html
+++ b/player/templates/player/player_status.html
@@ -1,4 +1,5 @@
 {% load l10n %}{% load i18n %}
+{% load static %}
 <div style="width: 100%; max-height: 100px; display: flex; align-items: stretch">
 <!--<div style="width: 1300px">-->
     <div class="col-xs-2 col-sm-2 col-md-1">
@@ -28,10 +29,10 @@
         </script>
         <div class="row" id="energy">энергии: {{ player.energy }}%</div>
         <div class="row">
-            <form method="POST" action="{% url 'do_mining' %}" enctype="multipart/form-data">
-                {% csrf_token %}
-                <button type="submit" enctype="multipart/form-data" class="save btn btn-default">Пополнить</button>
-            </form>
+            <script>
+                const csrftoken = '{{ csrf_token }}';
+            </script>
+            <button type="submit" onclick="recharge()" class="save btn btn-default">Пополнить</button>
         </div>
     </div>
 </div>
