--- a/party/templates/party/party_blocks/no_party.html
+++ b/party/templates/party/party_blocks/no_party.html
@@ -1,4 +1,5 @@
 {% load dict_key %}
+{% load static %}
 <div class="row">
     <div class="col-xs-2 col-sm-2 col-md-2">
     </div>
@@ -46,9 +47,9 @@
                 <div class="col-xs-2 col-sm-2 col-md-2">
                     <!--если у партии есть аватарка-->
                     {% if party.image %}
-                    <img src="{{ party.image }}" width="80" height="80" align="right">
+                    <img src="{{ party.image.url }}" width="80" height="80" align="right">
                     {% else %}
-                    нету :(
+                    <img src="{% static 'img/nopic_party.png' %}" width="80" height="80" align="right">
                     {% endif %}
                 </div>
                 <div class="col-xs-6 col-sm-6 col-md-6">
@@ -85,10 +86,10 @@
             <div class="row" style="margin: 1.5em;">
                 <div class="col-xs-2 col-sm-2 col-md-2">
                     <!--если у партии есть аватарка-->
-                    {% if party.image%}
-                    <img src="{{ party.image }}" width="80" height="80" align="right">
+                    {% if party.image %}
+                    <img src="{{ party.image.url }}" width="80" height="80" align="right">
                     {% else %}
-                    нету :(
+                    <img src="{% static 'img/nopic_party.png' %}" width="80" height="80" align="right">
                     {% endif %}
                 </div>
             <div class="col-xs-6 col-sm-6 col-md-6">
