--- a/party/templates/party/manage.html
+++ b/party/templates/party/manage.html
@@ -11,7 +11,7 @@
     <div class="row">
         <div class="col-xs-4 col-sm-4 col-md-4" align="center">
             <!--Картинка партии-->
-            <img id="party_coat" src="{% if player.party.image %}{{ player.party.image }}{% else %}{% static 'img/nopic_party.png' %}{% endif %}" width="250" height="250">
+            <img id="party_coat" src="{% if player.party.image %}{{ player.party.image.url }}{% else %}{% static 'img/nopic_party.png' %}{% endif %}" width="250" height="250">
             {% if player.party_post.party_lead %}
 <!--            <form method="POST" enctype="multipart/form-data" class="post-form" id="party_coat-form">-->
 <!--                {% csrf_token %}-->
@@ -99,10 +99,10 @@
         </div>
         <div class="col-xs-4 col-sm-4 col-md-4" align="center">
             {% if player.party.members_image %}
-            <!--Картинка кланового фона-->
-            <img id="party_back" src="{{ player.party.members_image }}" width="250" height="250">
+            <!--Картинка партийного фона-->
+            <img id="party_back" src="{{ player.party.members_image.url }}" width="250" height="250">
             {% else %}
-            <img id="party_back" src="{% static 'img/party/noback_party.png' %}" width="250" height="250">
+            <img id="party_back" src="{% static 'img/noback_party.png' %}" width="250" height="250">
             {% endif %}
             {% if player.party_post.party_lead %}
 <!--            <form method="POST" enctype="multipart/form-data" id="party_back-form">-->
