--- a/storage/templates/storage/storage_blocks/has_storage.html
+++ b/storage/templates/storage/storage_blocks/has_storage.html
@@ -10,9 +10,6 @@
 {% load l10n %}{% load i18n %}
 <script src='{% static "js/storage.js" %}?{{ csrf_token }}'></script>
 {% endblock %}
-<script>
-var csrftoken = '{{ csrf_token }}';
-</script>
 
 <div class="row" style="margin-bottom: 1%">
     <div class="col-xs-12 col-sm-12 col-md-12" id="trade_tab">
@@ -41,7 +38,7 @@ var csrftoken = '{{ csrf_token }}';
         <div class="progress" align="right">
             {% with cap_val=storage|get_attr:cap_name %}
                 {% with good_val=storage|get_attr:good %}
-                <div class="progress-bar bg-success" role="progressbar" style="width: {{ cap_val|get_proc:good_val }}%">{% localize off %}{{ storage|get_attr:good }}{% endlocalize %}</div>
+                <div class="progress-bar bg-success" role="progressbar" style="width: {{ cap_val|get_proc:good_val }}%; color:black;">{% localize off %}{{ storage|get_attr:good }}{% endlocalize %}</div>
                 {% endwith %}
                 {% if locks|has_key:good %}
                     {% with lock_val=locks|dict_key:good %}
