кнопка принятия и вычет дост из приб при продаже

--- a/storage/templates/storage/trading/trading.html
+++ b/storage/templates/storage/trading/trading.html
@@ -47,6 +47,7 @@
               <th role="columnheader">Цена (шт.)</th>
               <th role="columnheader">Доставка</th>
               <th role="columnheader">Сумма</th>
+              <th role="columnheader">Действие</th>
             </tr>
           </thead>
           <tbody>
