--- a/player/templates/player/menu.html
+++ b/player/templates/player/menu.html
@@ -5,3 +5,4 @@
 <br><br><a href="/storage">Склад</a>
 <br><br><a href="/assets">Активы</a>
 <br><br><a href="/trading">Торговля</a>
+<br><br><a href="/factory">Производство</a>
