--- a/party/templates/primaries/primaries.html
+++ b/party/templates/primaries/primaries.html
@@ -25,8 +25,8 @@
                         <div class="col-xs-8 col-sm-8 col-md-8" align="center" style="margin-bottom: 30px">
                             <h3>{% trans 'primaries_in_party' %}
                                 <!--если у партии есть аватарка-->
-                                {% if player.party.image_link %}
-                                <img src="{{ player.party.image_link }}" width="30" height="30">
+                                {% if player.party.image %}
+                                <img src="{{ player.party.image.url }}" width="30" height="30">
                                 {% else %}
                                 <img src="{% static 'img/nopic_party.png' %}" width="30" height="30">
                                 {% endif %}
@@ -42,11 +42,13 @@
                     <div class="row" style="border: 1px solid white;">
                         <div class="col-xs-2 col-sm-2 col-md-2">
                             <!--если пользователь загрузил аватарку-->
-                            {% if candidate.image_link %}
-                            <img src="{{ candidate.image_link }}" width="50" height="50" align="right">
-                            {% else %}
-                            <img src="{% static 'img/nopic.png' %}" width="50" height="50" align="right">
-                            {% endif %}
+                            <a href='profile/{{ member.pk }}' target="_blank">
+                                {% if member.image %}
+                                <img src="{{ member.image.url }}" width="50" height="50" align="right">
+                                {% else %}
+                                <img src="{% static 'img/nopic.png' %}" width="50" height="50" align="right">
+                                {% endif %}
+                            </a>
                         </div>
                         <div class="col-xs-8 col-sm-8 col-md-8">
                             <a href='/profile/{{ candidate.pk }}' target="_blank">
