--- a/party/templates/primaries/primaries.html
+++ b/party/templates/primaries/primaries.html
@@ -56,25 +56,27 @@
                             </a>
                         </div>
                         <div class="col-xs-2 col-sm-2 col-md-2">
-                            {% if not vote %}
-                                {% if candidate != player %}
-                            <a href="{% url 'vote_primaries' party_pk=candidate.party.pk player_pk=candidate.pk %}">
-                                <h3>
-                                    <font color="green">
-                                        <div class="glyphicon glyphicon-plus">
-                                        </div>
-                                    </font>
-                                </h3>
-                            </a>
-                                {% endif %}
-                            {% else %}
-                                {% if vote.candidate == candidate %}
-                            <h3>
-                                <font color="green">
-                                    <div class="glyphicon glyphicon-ok">
-                                    </div>
-                                </font>
-                            </h3>
+                            {% if can_vote %}
+                                {% if not vote %}
+                                    {% if candidate != player %}
+                                    <a href="{% url 'vote_primaries' party_pk=candidate.party.pk player_pk=candidate.pk %}">
+                                        <h3>
+                                            <font color="green">
+                                                <div class="glyphicon glyphicon-plus">
+                                                </div>
+                                            </font>
+                                        </h3>
+                                    </a>
+                                    {% endif %}
+                                {% else %}
+                                    {% if vote.candidate == candidate %}
+                                    <h3>
+                                        <font color="green">
+                                            <div class="glyphicon glyphicon-ok">
+                                            </div>
+                                        </font>
+                                    </h3>
+                                    {% endif %}
                                 {% endif %}
                             {% endif %}
                         </div>
