--- a/party/templates/primaries/primaries.html
+++ b/party/templates/primaries/primaries.html
@@ -43,8 +43,8 @@
                         <div class="col-xs-2 col-sm-2 col-md-2">
                             <!--если пользователь загрузил аватарку-->
                             <a href='profile/{{ member.pk }}' target="_blank">
-                                {% if member.image %}
-                                <img src="{{ member.image.url }}" width="50" height="50" align="right">
+                                {% if candidate.image %}
+                                <img src="{{ candidate.image.url }}" width="50" height="50" align="right">
                                 {% else %}
                                 <img src="{% static 'img/nopic.png' %}" width="50" height="50" align="right">
                                 {% endif %}
