--- a/storage/templates/storage/factory/factory.html
+++ b/storage/templates/storage/factory/factory.html
@@ -61,7 +61,7 @@
 </script>
 <div class="row">
     <div class="col-xs-12 col-sm-12 col-md-12">
-        <form id="new_offer_form" role="form">
+        <form id="produce_form" role="form">
             <div class="row" style="margin-top: 1%;">
                 <div class="col-xs-6 col-sm-6 col-md-6" align="right">
                     Склад
