--- a/storage/templates/storage/factory/factory.html
+++ b/storage/templates/storage/factory/factory.html
@@ -142,7 +142,10 @@
             <div class="col-xs-2 col-sm-2 col-md-2" align="left">
                 <input type="number" class="crude_count" min="0" style="width: 100%;">
             </div>
-            <div class="col-xs-8 col-sm-8 col-md-8" align="left">
+            <div class="col-xs-1 col-sm-1 col-md-1" align="left">
+                <div class="storage_stocks"></div>
+            </div>
+            <div class="col-xs-7 col-sm-7 col-md-7" align="left">
                 <input type="range" class="form-range crude_amount" min="0" max="5" step="1">
             </div>
         </div>
