--- a/storage/templates/storage/factory/factory.html
+++ b/storage/templates/storage/factory/factory.html
@@ -119,7 +119,7 @@
                     Количество
                 </div>
                 <div class="col-xs-2 col-sm-2 col-md-2" align="left">
-                    <input id="count" type="number" min="0" max="2147483647" value="0" step="1" name="count" maxlength="3"
+                    <input disabled id="count" type="number" min="0" max="2147483647" value="0" step="1" name="count" maxlength="3"
                         oninput="setAnotherValues(this.value)">
                 </div>
             </div>
