--- a/player/templates/player/view_profile.html
+++ b/player/templates/player/view_profile.html
@@ -14,17 +14,14 @@
             <div class="col-xs-1 col-sm-1 col-md-1" align="center"></div>
             <div class="col-xs-4 col-sm-4 col-md-4" align="center">
                 <!--Картинка профиля-->
-                <img id="plr_image_link" src="{% if player.image %}{{ player.image.url }}{% else %}{% static 'img/nopic.png' %}{% endif %}" width="250" height="250">
+                <img id="plr_image_link" src="{% if char.image %}{{ char.image.url }}{% else %}{% static 'img/nopic.png' %}{% endif %}" width="250" height="250">
             </div>
             <!--колонка характеристик персонажа-->
             <div class="col-xs-6 col-sm-6 col-md-6">
-                <div align="center" id="player_nickname" style="cursor: pointer; font-size: 20pt; font-weight: bold;">{{ player.nickname }}</div>
+                <div align="center" id="char_nickname" style="cursor: pointer; font-size: 20pt; font-weight: bold;">{{ char.nickname }}</div>
                 <ul class="nav nav-tabs">
-<!--                    <li class="active"><a data-toggle="tab" href="#info">{% trans 'player_info' %}</a></li>-->
+<!--                    <li class="active"><a data-toggle="tab" href="#info">{% trans 'char_info' %}</a></li>-->
                     <li class="active"><a data-toggle="tab" href="#info">Информация</a></li>
-<!--                    {% if player.account.socialaccount_set.all.0.provider == 'vk' %}-->
-<!--                    <li><a data-toggle="tab" href="#repost_tab">Золото за репост</a></li>-->
-<!--                    {% endif %}-->
                 </ul>
                 <div class="tab-content">
                     <div id="info" class="tab-pane fade in active" style="min-width: 600px">
@@ -34,7 +31,7 @@
                                 <b><font size="5" >ID:</font></b>
                             </div>
                             <div class="col-xs-6 col-sm-6 col-md-6">
-                                <b><font size="5" >{{ player.pk }}</font></b>
+                                <b><font size="5" >{{ char.pk }}</font></b>
                             </div>
                         </div>
                         <!--место нахождения-->
@@ -44,7 +41,7 @@
                                 <b><font size="5">Место жительства:</font></b>
                             </div>
                             <div class="col-xs-6 col-sm-6 col-md-6">
-                                <b><font size="4"  onclick="window.open('/region/{{ player.region.pk }}/', '_blank')" style="cursor: pointer">{{ player.region }}</font></b>
+                                <b><font size="4"  onclick="window.open('/region/{{ char.region.pk }}/', '_blank')" style="cursor: pointer">{{ char.region }}</font></b>
                             </div>
                         </div>
                         <!--место прописки-->
@@ -55,8 +52,8 @@
                             </div>
                             <div class="col-xs-6 col-sm-6 col-md-6">
                                 <!--получена-->
-<!--                                <b><font size="4"  onclick="window.open('/region/{{ player.residency.pk }}/', '_blank')" style="cursor: pointer">{{ player.residency }}, {% trans 'since' %}: {{ player.residency_date|timezone:player.time_zone|date:"d.m.Y H:i" }}</font></b>-->
-                                <b><font size="4"  onclick="window.open('/region/{{ player.residency.pk }}/', '_blank')" style="cursor: pointer">{{ player.residency }}, с: {{ player.residency_date|timezone:player.time_zone|date:"d.m.Y H:i" }}</font></b>
+<!--                                <b><font size="4"  onclick="window.open('/region/{{ char.residency.pk }}/', '_blank')" style="cursor: pointer">{{ char.residency }}, {% trans 'since' %}: {{ char.residency_date|timezone:char.time_zone|date:"d.m.Y H:i" }}</font></b>-->
+                                <b><font size="4"  onclick="window.open('/region/{{ char.residency.pk }}/', '_blank')" style="cursor: pointer">{{ char.residency }}, с: {{ char.residency_date|timezone:char.time_zone|date:"d.m.Y H:i" }}</font></b>
                             </div>
                         </div>
                         <!--партия-->
@@ -66,14 +63,14 @@
                                 <b><font size="5" >Партия:</font></b>
                             </div>
                             <div class="col-xs-6 col-sm-6 col-md-6">
-                                {% if player.party %}
-                                    {% if player.party.image %}
+                                {% if char.party %}
+                                    {% if char.party.image %}
                                     <!--Картинка партии-->
-                                    <img src="{{ player.party.image.url }}" width="50" height="50">
+                                    <img src="{{ char.party.image.url }}" width="50" height="50">
                                     {% else %}
                                     <img src="{% static 'img/nopic_party.png' %}" width="50" height="50">
                                     {% endif %}
-                                    <b><font size="4" >{{ player.party.title }}</font></b>
+                                    <b><font size="4" >{{ char.party.title }}</font></b>
                                 {% else %}
                                     <b><font size="5" >беспартийный</font></b>
 <!--                                    <b><font size="5" >{% trans 'unaffiliated' %}</font></b>-->
@@ -87,8 +84,8 @@
 <!--                                <b><font size="5" >{% trans 'party_post' %}:</font></b>-->
                             </div>
                             <div class="col-xs-6 col-sm-6 col-md-6">
-                                {% if player.party_post %}
-                                    <b><font size="4" >{{ player.party_post.title }}</font></b>
+                                {% if char.party_post %}
+                                    <b><font size="4" >{{ char.party_post.title }}</font></b>
                                 {% else %}
                                     <b><font size="5" >беспартийный</font></b>
 <!--                                    <b><font size="5" >{% trans 'unaffiliated' %}</font></b>-->
