--- a/player/templates/player/header.html
+++ b/player/templates/player/header.html
@@ -11,6 +11,15 @@
     <script src='{% static "header.js" %}?{{ csrf_token }}'></script>
     {% block for_scripts_and_css %}
     {% endblock %}
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-118774469-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-118774469-1');
+    </script>
 </head>
 <body>
 <!-- Глобальное модальное окно -->
