--- a/player/templates/player/profile.html
+++ b/player/templates/player/profile.html
@@ -4,6 +4,66 @@
 {% load i18n %}
 {% load tz %}
 {% block for_scripts_and_css %}
+<script src='{% static "cropper.js" %}?{{ csrf_token }}'></script>
+<link rel="stylesheet" href='{% static "cropper.css" %}?{{ csrf_token }}'>
+<script>
+    $(function () {
+
+    /* SCRIPT TO OPEN THE MODAL WITH THE PREVIEW */
+    $("#id_image").change(function () {
+      if (this.files && this.files[0]) {
+        var reader = new FileReader();
+        reader.onload = function (e) {
+          $("#image").attr("src", e.target.result);
+          $("#modalCrop").modal("show");
+        }
+        reader.readAsDataURL(this.files[0]);
+      }
+    });
+
+    /* SCRIPTS TO HANDLE THE CROPPER BOX */
+    var $image = $("#image");
+    var cropBoxData;
+    var canvasData;
+    $("#modalCrop").on("shown.bs.modal", function () {
+      $image.cropper({
+        viewMode: 1,
+        aspectRatio: 1/1,
+        minCropBoxWidth: 250,
+        minCropBoxHeight: 250,
+        ready: function () {
+          $image.cropper("setCanvasData", canvasData);
+          $image.cropper("setCropBoxData", cropBoxData);
+        }
+      });
+    }).on("hidden.bs.modal", function () {
+      cropBoxData = $image.cropper("getCropBoxData");
+      canvasData = $image.cropper("getCanvasData");
+      $image.cropper("destroy");
+    });
+
+    // Enable zoom in button
+    $(".js-zoom-in").click(function () {
+      $image.cropper("zoom", 0.1);
+    });
+
+    // Enable zoom out button
+    $(".js-zoom-out").click(function () {
+      $image.cropper("zoom", -0.1);
+    });
+
+    /* SCRIPT TO COLLECT THE DATA AND POST TO THE SERVER */
+    $(".js-crop-and-upload").click(function () {
+        var cropData = $image.cropper("getData");
+        $("#id_x").val(cropData["x"]);
+        $("#id_y").val(cropData["y"]);
+        $("#id_height").val(cropData["height"]);
+        $("#id_width").val(cropData["width"]);
+        $("#formUpload").submit();
+    });
+
+    });
+</script>
 {% endblock %}
 
 {% block content %}
@@ -13,6 +73,38 @@
             <div class="col-xs-4 col-sm-4 col-md-4" align="center">
                 <!--Картинка профиля-->
                 <img id="plr_image_link" src="{% if player.image %}{{ player.image.url }}{% else %}{% static 'img/nopic.png' %}{% endif %}" width="250" height="250">
+                <form method="post" enctype="multipart/form-data" id="formUpload">
+                    {% csrf_token %}
+                    {{ form }}
+                </form>
+                <!-- MODAL TO CROP THE IMAGE -->
+                <div class="modal fade" id="modalCrop">
+                  <div class="modal-dialog">
+                    <div class="modal-content">
+                      <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                          <span aria-hidden="true">&times;</span>
+                        </button>
+                        <h4 class="modal-title">Crop the photo</h4>
+                      </div>
+                      <div class="modal-body">
+                        <img src="" id="image" style="max-width: 100%;">
+                      </div>
+                      <div class="modal-footer">
+                        <div class="btn-group pull-left" role="group">
+                          <button type="button" class="btn btn-default js-zoom-in">
+                            <span class="glyphicon glyphicon-zoom-in"></span>
+                          </button>
+                          <button type="button" class="btn btn-default js-zoom-out">
+                            <span class="glyphicon glyphicon-zoom-out"></span>
+                          </button>
+                        </div>
+                        <button type="button" class="btn btn-default" data-dismiss="modal">Nevermind</button>
+                        <button type="button" class="btn btn-primary js-crop-and-upload">Crop and upload</button>
+                      </div>
+                    </div>
+                    </div>
+                </div>
             </div>
             <!--колонка характеристик персонажа-->
             <div class="col-xs-6 col-sm-6 col-md-6">
